k8s/stress-pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: stress-test-tools
  labels:
    app: stress-test
spec:
  # restartPolicy: Never - If you want the pod to terminate after installation and not restart.
  # restartPolicy: OnFailure - If you want the pod to restart only in case of failure.
  # restartPolicy: Always - If you want the pod to always remain running and restart on any failures.
  # For this scenario, where we want to connect and use the tools, 'Always' or 'OnFailure' is suitable.
  # I am using 'Always' and 'sleep infinity' in the command to keep the pod running.
  restartPolicy: Always
  containers:
    - name: stress-tester
      image: ubuntu:latest
      imagePullPolicy: Always # Always pull the latest image
      command: ["/bin/bash", "-c"]
      args:
        - |
          [...]
      resources:
        requests:
          memory: "1Gi"
          cpu: "1"
        limits:
          memory: "2Gi"
          cpu: "2"
