k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: groceries-frontend-ingress
  annotations:
    kubernetes.io/ingress.global-static-ip-name: gke-ingress-ip
spec:
  ingressClassName: gce
  rules:
    - host: groceries.george-falkovich.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: groceries-frontend
                port:
                  number: 80
